--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <header>
             <div class="toggle"></div>
             <a href="#" class="logo">
-                <img src="/img/logo.png">
+                <img src="img/logo.png">
             </a>
         </header>
 
         <div class="content">
-            <img src="/img/text.png" class="textimg">
+            <img src="img/text.png" class="textimg">
             <p>Hundreds of cash-strapped players accept a strange invitation to compete in children's games. Inside, a tempting prize awaits - with deadly high stakes.</p>
             <a href="#" class="btn">
                 <ion-icon name="play-circle-outline"></ion-icon> Watch Trailer</a>
@@ -27,12 +27,12 @@
 
         <div class="clip">
             <div class="clipBox">
-                <img src="/img/img1.jpg">
+                <img src="img/img1.jpg">
                 <ion-icon name="play-circle-outline"></ion-icon>
             </div>
 
             <div class="clipBox">
-                <img src="/img/img2.jpg">
+                <img src="img/img2.jpg">
                 <ion-icon name="play-circle-outline"></ion-icon>
             </div>
         </div>
